--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,18 @@
     }
 }
 
+.test-row {
+    position: relative;
+    .remaining-keys {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 100%;
+        font-size: 2em;
+        text-wrap: nowrap;
+        padding-left: 0.5em;
+    }
+}
 .test-button {
     font-size: 16px;
     cursor: pointer;
@@ -60,7 +72,7 @@
     height: 4em;
     background-color: #6b6b6b;
 
-    &:not(:disabled) {
+    &:not([data-disabled='true']) {
         animation: expand-and-contract 0.5s ease-in-out;
         background-color: #03b83c;
     }
