--- a/src/App.scss
+++ b/src/App.scss
@@ -99,3 +99,11 @@
         scale: 1.1;
     }
 }
+
+.key-history {
+    .key-history-row {
+        font-size: 2em;
+        height: 1em;
+        line-height: 1em;
+    }
+}
