--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
+    flex: 1;
     text-align: center;
     display: flex;
     flex-direction: column;
