--- a/src/components/level/Level.scss
+++ b/src/components/level/Level.scss
@@ -1,6 +1,10 @@
 .carousels {
     position: relative;
     background-color: #2a2a2a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 
     .center {
         font-size: 64px;
