--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -1,27 +1,34 @@
 .modal-container {
     position: fixed;
-    inset: 0;
-    background-color: #00000099;
+    left: 0;
+    bottom: 100%;
+    background-color: #141414;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 10;
+    width: 100vw;
+    width: 100dvw;
+    height: 100vh;
+    height: 100dvh;
+    animation: slide-down 0.5s ease-in-out forwards;
+
+    &.out {
+        animation: slide-up 0.5s ease-in-out forwards;
+    }
 
     .modal {
-        position: absolute;
-        left: 50%;
-        background-color: #444;
-        padding: 1.5em 2.6em;
-        min-width: 350px;
-        animation: slide-up 0.5s ease-in-out forwards;
+        position: relative;
+        // background-color: #444;
+        margin: 0 3em 0 3em;
         border-radius: 0.2em;
 
         .close-modal-button {
             cursor: pointer;
             color: #aaa;
             position: absolute;
-            right: 1em;
-            top: 1em;
+            right: -2em;
+            top: -2em;
             background-color: transparent;
             border: none;
             font-size: 1em;
@@ -31,13 +38,20 @@
     }
 }
 
-@keyframes slide-up {
+@keyframes slide-down {
     from {
-        top: 0%;
-        transform: translate(-50%, -100%);
+        bottom: 100%;
     }
     to {
-        top: 20%;
-        transform: translate(-50%, 0%);
+        bottom: 0;
+    }
+}
+
+@keyframes slide-up {
+    from {
+        bottom: 0;
+    }
+    to {
+        bottom: 100%;
     }
 }
