--- a/src/components/level/Level.scss
+++ b/src/components/level/Level.scss
@@ -1,6 +1,6 @@
 .carousels {
     position: relative;
-    background-color: #2a2a2a;
+    background-color: #1a1a1a;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +14,7 @@
         transform: translate(-50%);
         width: 1.4em;
         height: 6.4em;
-        border: solid 10px #aaa;
+        border: solid 10px #979797;
         border-radius: 0.1em;
         z-index: 2;
         pointer-events: none;
@@ -23,6 +23,7 @@
 
 .test-row {
     position: relative;
+
     .remaining-keys {
         position: absolute;
         top: 50%;
