--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,6 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -38,6 +36,8 @@ body {
     height: 100vh;
     height: 100dvh;
     overflow-x: hidden;
+    color: #eee;
+    background-color: #141414;
 }
 
 h1 {
