--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -1,7 +1,7 @@
 .modal-container {
     position: fixed;
     left: 0;
-    bottom: 100%;
+    bottom: 0;
     background-color: #141414;
     display: flex;
     align-items: center;
@@ -11,10 +11,13 @@
     width: 100dvw;
     height: 100vh;
     height: 100dvh;
-    animation: slide-down 0.5s ease-in-out forwards;
     box-shadow: 0 2em 2em 2em #141414;
 
-    &.out {
+    &.slide-in {
+        animation: slide-down 0.5s ease-in-out forwards;
+    }
+
+    &.slide-out {
         animation: slide-up 0.5s ease-in-out forwards;
     }
 
