--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,38 @@
     gap: 2em;
 }
 
+.navbar {
+    padding: 0 1.5em;
+    display: flex;
+    align-items: center;
+    background-color: #141414;
+    gap: 1em;
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    text-align: left;
+
+    .title-container {
+        display: flex;
+        align-items: baseline;
+        gap: 0 1em;
+        flex-wrap: wrap;
+
+        .title {
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        .date {
+            font-size: 0.8rem;
+            color: #ddd;
+        }
+    }
+}
+
 .copyright {
     margin-top: auto;
     opacity: 0.5;
