--- a/src/components/level/Level.scss
+++ b/src/components/level/Level.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin-top: 100px;
 
     .center {
         font-size: 64px;
