--- a/src/components/level/Level.scss
+++ b/src/components/level/Level.scss
@@ -26,6 +26,7 @@
     position: relative;
 
     .remaining-keys {
+        font-family: 'Bebas Neue', sans-serif;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
