--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -29,6 +29,7 @@
     .modal {
         position: relative;
         // background-color: #444;
+        min-height: 300px;
         margin: 0 3em 0 3em;
         border-radius: 0.2em;
 
