--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -8,6 +8,8 @@
         display: flex;
 
         .letter {
+            font-family: 'Courier New', Courier, monospace;
+            text-transform: uppercase;
             flex-shrink: 0;
             display: flex;
             align-items: center;
