fix modal slide out bug

--- a/src/components/level-modal/LevelModal.scss
+++ b/src/components/level-modal/LevelModal.scss
@@ -4,24 +4,41 @@
     }
 
     .click-to-reveal {
+        display: inline-block;
+        font-size: 1em;
+        background-color: #fff1;
+        border: none;
+        padding: 0.8em 1.4em;
+        border-radius: 0.2em;
     }
 
     .revealed-word {
+        display: inline-block;
+        font-size: 1.4em;
         font-family: 'Courier New', Courier, monospace;
         text-transform: uppercase;
         letter-spacing: 0.1em;
-        animation: slide-up 1s forwards;
+        animation: fade-in 1s forwards;
         opacity: 0;
     }
 
     .visit-tomorrow {
         font-size: 0.8em;
-        animation: slide-up 1s 2s forwards;
+        animation: slide-up-level-modal 1s 1.5s forwards;
         opacity: 0;
     }
 }
 
-@keyframes slide-up {
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes slide-up-level-modal {
     from {
         transform: translateY(100%);
         opacity: 0;
