--- a/src/components/level/Level.scss
+++ b/src/components/level/Level.scss
@@ -26,7 +26,7 @@
     position: relative;
 
     .remaining-keys {
-        font-family: 'Bebas Neue', sans-serif;
+        font-family: 'Courier New', Courier, monospace;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -36,9 +36,9 @@
         padding-left: 0.5em;
     }
 }
+
 .test-button {
     font-size: 16px;
-
     display: flex;
     align-items: center;
     justify-content: center;
