--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,20 @@ a {
     text-decoration: inherit;
 }
 
+button {
+    font-family: inherit;
+    cursor: pointer;
+    opacity: 1;
+
+    &:active {
+        opacity: 1;
+    }
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
 img {
     pointer-events: none;
 }
