Update keys chart styles

--- a/src/components/stats/KeysChart.scss
+++ b/src/components/stats/KeysChart.scss
@@ -4,7 +4,7 @@
 
 .keys-chart {
     display: flex;
-    height: 150px;
+    height: 170px;
     width: 240px;
     gap: 0.5em;
     margin-bottom: 2em;
@@ -23,9 +23,11 @@
         .bar {
             position: relative;
             background-color: #eee;
+            color: #222;
 
             &.today {
                 background-color: #03b83c;
+                color: #eee;
 
                 &::after {
                     content: 'today';
@@ -36,6 +38,14 @@
                     text-align: center;
                     font-size: 0.8em;
                 }
+            }
+
+            .count {
+                position: absolute;
+                top: 0.1em;
+                left: 50%;
+                font-size: 0.8em;
+                transform: translateX(-50%);
             }
         }
     }
